--- a/assets/scss/global.css
+++ b/assets/scss/global.css
@@ -376,6 +376,10 @@ section {
   width: 100vw;
 }
 
+.project .highlight {
+  font-size: 14px;
+}
+
 .project p {
   margin-bottom: 0;
   font-size: 16px;
@@ -390,7 +394,7 @@ section {
 .project h1 {
   font-size: 42px;
   padding: 0;
-  margin-top: 0;
+  margin: 0;
 }
 
 .project-infos {
