--- a/assets/scss/global.scss
+++ b/assets/scss/global.scss
@@ -366,6 +366,10 @@ section {
 
     &_container {
       height: 125%;
+
+      @media screen and (max-width: $lg) {
+        height:auto;
+      }
     }
   }
 
@@ -428,7 +432,8 @@ section {
 
     @media screen and (max-width: $lg) {
       position: inherit;
-      margin-top: 60px;
+      margin-top: 30px;
+      overflow-y: auto;
     }
 
     img {
@@ -446,6 +451,7 @@ section {
     @media screen and (max-width: $lg) {
       position: inherit;
       justify-content: center;
+      margin-top: 30px;
     }
 
     &_link {
